fix (security): Harden dockerfiles - Added unprivileged python user - Created venv for all pip install - Added chown for all files and dirs - Added --no-install-recommends to apt-get install cmd - Fixed feluda core server.py import issue

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,6 +1,7 @@
 # FROM jrottenberg/ffmpeg:4.0-scratch AS ffmpeg
 
 FROM python:3.11-slim-bullseye AS base
+
 # COPY --from=ffmpeg / /
 RUN apt-get update \
     && apt-get -y upgrade \
@@ -11,18 +12,27 @@ RUN apt-get update \
 #    gcc build-essential \
 #    libgl1-mesa-glx libglib2.0-0 \
     && rm -rf /var/lib/apt/lists/* 
-ENV PATH=/root/.local/bin:$PATH
+
+# Set python user
+RUN groupadd -g 999 python && \
+    useradd --create-home -r -u 999 -g python python
+RUN mkdir /usr/app && chown python:python /usr/app
+WORKDIR /usr/app
+
+# Set venv
+RUN python -m venv /usr/app/venv && chown -R python:python /usr/app/venv
+ENV PATH="/usr/app/venv/bin:$PATH"
+
 RUN pip install --no-cache-dir --upgrade pip
-RUN apt-get update && apt-get -y upgrade && apt-get install -y vim curl
+RUN apt-get update && apt-get -y upgrade && apt-get install -y --no-install-recommends vim curl
 # RUN apt-get install -y ffmpeg
 # RUN apt-get update && \
 #     apt-get -y upgrade && \
 #     apt-get install -y tesseract-ocr tesseract-ocr-hin
-RUN apt-get update && apt-get -y upgrade && apt-get install wget
-WORKDIR /app
-COPY requirements.txt /app/requirements.txt
-RUN pip install --no-cache-dir --user -r requirements.txt
-COPY . /app
+RUN apt-get update && apt-get -y upgrade && apt-get install -y --no-install-recommends wget
+COPY --chown=python:python requirements.txt /usr/app/requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
+COPY --chown=python:python . /usr/app
 EXPOSE 7000
 
 # RUN apt-get update \
@@ -34,11 +44,13 @@ EXPOSE 7000
 
 #### DEBUG IMAGE ####
 FROM base AS debug
-RUN apt-get update && apt-get install -y vim zsh jq
+RUN apt-get update && apt-get install -y --no-install-recommends vim zsh jq
 RUN pip install --no-cache-dir debugpy nose2
 RUN export FLASK_DEBUG=1
+USER 999
 CMD python -m debugpy --listen 0.0.0.0:5678 --wait-for-client -m flask run -h 0.0.0.0 -p 5000
 
 #### PROD IMAGE ####
-FROM base as prod
+FROM base AS prod
+USER 999
 CMD flask run --host=0.0.0.0
