--- a/src/Dockerfile.test
+++ b/src/Dockerfile.test
@@ -1,18 +1,28 @@
 FROM python:3.11-slim-bullseye AS base
+
 RUN apt-get update \
     && apt-get -y upgrade \
     && rm -rf /var/lib/apt/lists/*
-ENV PATH=/root/.local/bin:$PATH
+
+# Set python user
+RUN groupadd -g 999 python && \
+    useradd --create-home -r -u 999 -g python python
+RUN mkdir /usr/app && chown python:python /usr/app
+WORKDIR /usr/app
+
+# Set venv
+RUN python -m venv /usr/app/venv && chown -R python:python /usr/app/venv
+ENV PATH="/usr/app/venv/bin:$PATH"
+
 RUN pip install --no-cache-dir --upgrade pip
-RUN apt-get update && apt-get -y upgrade && apt-get install -y wget curl grep
-WORKDIR /app
-COPY requirements.txt /app/requirements.txt
-RUN pip install --no-cache-dir --user -r requirements.txt
-COPY . /app
+RUN apt-get update && apt-get -y upgrade && apt-get install -y --no-install-recommends wget curl grep
+COPY --chown=python:python requirements.txt /usr/app/requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
+COPY --chown=python:python . /usr/app
 
 #### TEST IMAGE ####
 FROM base AS test
 RUN cd core/operators \
-    && pip install --no-cache-dir --user -r vid_vec_rep_resnet_requirements.txt \
-    && pip install --no-cache-dir --user -r audio_vec_embedding_requirements.txt
-
+    && pip install --no-cache-dir -r vid_vec_rep_resnet_requirements.txt \
+    && pip install --no-cache-dir -r audio_vec_embedding_requirements.txt
+USER 999
