--- a/.github/workflows/pr-security.yml
+++ b/.github/workflows/pr-security.yml
@@ -76,7 +76,7 @@ jobs:
           scanners: 'vuln,misconfig,secret'
           skip-dirs: '.vscode,docs'
           exit-code: '1'
-#      - name: Upload Trivy scan results to GitHub Security tab
-#        uses: github/codeql-action/upload-sarif@v2
-#        with:
-#          sarif_file: 'trivy-results.sarif'
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: 'trivy-results.sarif'
