--- a/.github/workflows/pr-security.yml
+++ b/.github/workflows/pr-security.yml
@@ -75,10 +75,13 @@ jobs:
           ignore-unfixed: true
           format: 'sarif'
           output: 'trivy-results.sarif'
+          limit-severities-for-sarif: true
           severity: 'HIGH,CRITICAL'
           scanners: 'vuln,misconfig,secret'
           skip-dirs: '.vscode,docs'
+          exit-code: '1'
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
+        if: always()
         with:
           sarif_file: 'trivy-results.sarif'
