--- a/.github/workflows/pr-security.yml
+++ b/.github/workflows/pr-security.yml
@@ -94,7 +94,7 @@ jobs:
           # File or directory to run bandit on
           path: ./src/ # optional, default is .
           # Report only issues of a given severity level or higher. Can be LOW, MEDIUM or HIGH. Default is UNDEFINED (everything)
-          level: HIGH # optional, default is UNDEFINED
+          # level: HIGH # optional, default is UNDEFINED
           # Report only issues of a given confidence level or higher. Can be LOW, MEDIUM or HIGH. Default is UNDEFINED (everything)
           # confidence: # optional, default is UNDEFINED
           # comma-separated list of paths (glob patterns supported) to exclude from scan (note that these are in addition to the excluded paths provided in the config file) (default: .svn,CVS,.bzr,.hg,.git,__pycache__,.tox,.eggs,*.egg)
