--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -13,7 +13,7 @@
 name: Bandit
 on:
   schedule:
-    - cron: '0 6 * * 2'
+    - cron: '35 4 * * 2'
 
 jobs:
   bandit:
@@ -33,7 +33,7 @@ jobs:
           # exit with 0, even with results found
           exit_zero: true # optional, default is DEFAULT
           # Github token of the repository (automatically created by Github)
-          # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information.
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information.
           # File or directory to run bandit on
           path: ./src/ # optional, default is .
           # Report only issues of a given severity level or higher. Can be LOW, MEDIUM or HIGH. Default is UNDEFINED (everything)
