ci: updating hash worker github workflow

--- a/.github/workflows/docker-push-hash-worker-staging.yml
+++ b/.github/workflows/docker-push-hash-worker-staging.yml
@@ -1,4 +1,4 @@
-name: Publish MD5 Hash Worker to Dockerhub for Staging
+name: Publish Hash Worker to Dockerhub for Staging
 
 on: workflow_dispatch
 
@@ -26,8 +26,8 @@ jobs:
         with:
           username: tattletech
           password: ${{ secrets.DOCKER_PASSWORD }}
-          name: tattletech/feluda-operator-md5hash
+          name: tattletech/feluda-operator-hash
           workdir: src/
-          dockerfile: worker/md5hash/Dockerfile.md5hash_worker
+          dockerfile: worker/hash/Dockerfile.hash_worker
           tags: worker-amd64-latest
           platforms: linux/amd64
