--- a/.github/workflows/docker-push-vidvec-benchmark.yml
+++ b/.github/workflows/docker-push-vidvec-benchmark.yml
@@ -1,54 +1,40 @@
 name: Publish Video Operator to Dockerhub
 
+permissions:
+  contents: read
+
 on: workflow_dispatch
 
 jobs:
-  api:
+  docker:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-        with:
-          ref: master
-      - name: "Setup Node version"
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20.9.0
-      - name: Declare some variables
-        id: vars
-        shell: bash
-        run: |
-          echo "setting variables"
-          echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@68827325e0b33c7199eb31dd4e31fbe9023e06e3 # v3.0.0
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - uses: elgohr/Publish-Docker-Github-Action@main
-        with:
-          username: tattletech
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          name: tattletech/feluda-operator-vidvec
-          workdir: src/
-          dockerfile: benchmark/vidvec/Dockerfile.vid_vec_rep_resnet
-          tags: benchmark-amd64-latest
-          platforms: linux/amd64
-      - uses: elgohr/Publish-Docker-Github-Action@main
-        with:
-          username: tattletech
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          name: tattletech/feluda-operator-vidvec
-          workdir: src/
-          dockerfile: benchmark/vidvec/Dockerfile.vid_vec_rep_resnet_graviton
-          tags: benchmark-arm64-latest
-          platforms: linux/arm64
+        uses: docker/setup-buildx-action@2b51285047da1547ffb1b2203d8be4c0af6b1f20 # v3.2.0
 
-      # - name: deploy to cluster
-      #   uses: steebchen/kubectl@v2.0.0
-      #   with: # defaults to latest kubectl binary version
-      #     config: ${{ secrets.PROD_KUBE_CONFIG_DATA }}
-      #     command: set image --record deployment/feluda-server feluda-server=tattletech/feluda-server:${{ steps.vars.outputs.sha_short }}
-      # - name: verify deployment
-      #   uses: steebchen/kubectl@v2.0.0
-      #   with:
-      #     config: ${{ secrets.PROD_KUBE_CONFIG_DATA }}
-      #     version: v1.21.0 # specify kubectl binary version explicitly
-      #     command: rollout status deployment/feluda-server
+      - name: Login to Docker Hub
+        uses: docker/login-action@e92390c5fb421da1463c202d546fed0ec5c39f20 # v.3.1.0
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push amd64
+        uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0 # v5.3.0
+        with:
+          context: "{{defaultContext}}:src/"
+          file: benchmark/vidvec/Dockerfile.vid_vec_rep_resnet
+          platforms: linux/amd64
+          push: true
+          tags: tattletech/feluda-operator-vidvec:benchmark-amd64-latest
+
+      - name: Build and push arm64
+        uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0 # v5.3.0
+        with:
+          context: "{{defaultContext}}:src/"
+          file: benchmark/vidvec/Dockerfile.vid_vec_rep_resnet_graviton
+          platforms: linux/arm64
+          push: true
+          tags: tattletech/feluda-operator-vidvec:benchmark-arm64-latest
