--- a/.github/workflows/merge-main.yml
+++ b/.github/workflows/merge-main.yml
@@ -1,5 +1,8 @@
 name: Merge PR to main
 
+permissions:
+  contents: read
+
 on:
   pull_request:
     types:
@@ -8,116 +11,104 @@ on:
       - main
 
 jobs:
-  if_merged:
+  release:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     concurrency: release
     permissions:
       contents: write
+    # Map a step output to a job output
+    outputs:
+      released: ${{ steps.release.outputs.released }}
+      tag: ${{ steps.release.outputs.tag }}
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
           fetch-depth: 0
 
       - name: Setup Python version
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c # v5.0.0
         with:
           python-version: '3.11'
 
-#      - name: Dry Run to get next release version
-#        id: next_version
-#        shell: bash
-#        run: |
-#          pip install python-semantic-release
-#          echo "new_tag_version=$(semantic-release --noop version --print)" >> $GITHUB_OUTPUT
-
       - name: Python Semantic Release
         id: release
-        uses: python-semantic-release/python-semantic-release@master
+        uses: python-semantic-release/python-semantic-release@c82bd673c30da94a02e039963c8c4c8a51758096 # v9.1.1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-#        shell: bash
-#        run: |
-#          echo "the release status is: ${{ steps.release.outputs.released }}"
-#          echo "the new version is: ${{ steps.release.outputs.version }}"
-#          echo "the new tag version is: ${{ steps.release.outputs.tag }}"
+
+  docker:
+    needs: release
+    if: needs.release.outputs.released == 'true'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@68827325e0b33c7199eb31dd4e31fbe9023e06e3 # v3.0.0
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+        uses: docker/setup-buildx-action@2b51285047da1547ffb1b2203d8be4c0af6b1f20 # v3.2.0
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@e92390c5fb421da1463c202d546fed0ec5c39f20 # v.3.1.0
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Publish vidvec amd64 worker to dockerhub
-        if: steps.release.outputs.released == 'true'
-        uses: elgohr/Publish-Docker-Github-Action@main
+        uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0 # v5.3.0
         with:
-          username: tattletech
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          name: tattletech/feluda-operator-vidvec
-          workdir: src/
-          dockerfile: worker/vidvec/Dockerfile.video_worker
-          tags: worker-amd64-${{ steps.release.outputs.tag }}
+          context: "{{defaultContext}}:src/"
+          file: worker/vidvec/Dockerfile.video_worker
           platforms: linux/amd64
+          push: true
+          tags: tattletech/feluda-operator-vidvec:worker-amd64-${{ needs.release.outputs.tag }}
 
       - name: Publish vidvec arm64 worker to dockerhub
-        if: steps.release.outputs.released == 'true'
-        uses: elgohr/Publish-Docker-Github-Action@main
+        uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0 # v5.3.0
         with:
-          username: tattletech
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          name: tattletech/feluda-operator-vidvec
-          workdir: src/
-          dockerfile: worker/vidvec/Dockerfile.video_worker_graviton
-          tags: worker-arm64-${{ steps.release.outputs.tag }}
+          context: "{{defaultContext}}:src/"
+          file: worker/vidvec/Dockerfile.video_worker_graviton
           platforms: linux/arm64
+          push: true
+          tags: tattletech/feluda-operator-vidvec:worker-arm64-${{ needs.release.outputs.tag }}
 
       - name: Publish audiovec amd64 worker to dockerhub
-        if: steps.release.outputs.released == 'true'
-        uses: elgohr/Publish-Docker-Github-Action@main
+        uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0 # v5.3.0
         with:
-          username: tattletech
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          name: tattletech/feluda-operator-audiovec
-          workdir: src/
-          dockerfile: worker/audiovec/Dockerfile.audio_worker
-          tags: worker-amd64-${{ steps.release.outputs.tag }}
+          context: "{{defaultContext}}:src/"
+          file: worker/audiovec/Dockerfile.audio_worker
           platforms: linux/amd64
+          push: true
+          tags: tattletech/feluda-operator-audiovec:worker-amd64-${{ needs.release.outputs.tag }}
 
       - name: Publish audiovec arm64 worker to dockerhub
-        if: steps.release.outputs.released == 'true'
-        uses: elgohr/Publish-Docker-Github-Action@main
+        uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0 # v5.3.0
         with:
-          username: tattletech
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          name: tattletech/feluda-operator-audiovec
-          workdir: src/
-          dockerfile: worker/audiovec/Dockerfile.audio_worker_graviton
-          tags: worker-arm64-${{ steps.release.outputs.tag }}
+          context: "{{defaultContext}}:src/"
+          file: worker/audiovec/Dockerfile.audio_worker_graviton
           platforms: linux/arm64
+          push: true
+          tags: tattletech/feluda-operator-audiovec:worker-arm64-${{ needs.release.outputs.tag }}
 
       - name: Publish media hash amd64 worker to dockerhub
-        if: steps.release.outputs.released == 'true'
-        uses: elgohr/Publish-Docker-Github-Action@main
+        uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0 # v5.3.0
         with:
-          username: tattletech
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          name: tattletech/feluda-operator-hash
-          workdir: src/
-          dockerfile: worker/hash/Dockerfile.hash_worker
-          tags: worker-amd64-${{ steps.release.outputs.tag }}
+          context: "{{defaultContext}}:src/"
+          file: worker/hash/Dockerfile.hash_worker
           platforms: linux/amd64
+          push: true
+          tags: tattletech/feluda-operator-hash:worker-amd64-${{ needs.release.outputs.tag }}
 
       - name: Publish media hash arm64 worker to dockerhub
-        if: steps.release.outputs.released == 'true'
-        uses: elgohr/Publish-Docker-Github-Action@main
+        uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0 # v5.3.0
         with:
-          username: tattletech
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          name: tattletech/feluda-operator-hash
-          workdir: src/
-          dockerfile: worker/hash/Dockerfile.hash_worker_graviton
-          tags: worker-arm64-${{ steps.release.outputs.tag }}
+          context: "{{defaultContext}}:src/"
+          file: worker/hash/Dockerfile.hash_worker_graviton
           platforms: linux/arm64
+          push: true
+          tags: tattletech/feluda-operator-hash:worker-arm64-${{ needs.release.outputs.tag }}
 
 #      - name: deploy to cluster
 #        uses: steebchen/kubectl@v2.0.0
