--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -1,5 +1,8 @@
 name: Run tests on PR
 
+permissions:
+  contents: read
+
 on:
   pull_request:
     branches:
@@ -18,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
 
       - name: Build container for tests
         run: docker compose -f ./.ci/docker-compose.yml -p ci build
