--- a/.github/workflows/docker-push-hash-worker-staging.yml
+++ b/.github/workflows/docker-push-hash-worker-staging.yml
@@ -29,6 +29,8 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: tattletech/feluda-operator-hash:worker-amd64-latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Build and push arm64
         uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0 # v5.3.0
@@ -38,3 +40,5 @@ jobs:
           platforms: linux/arm64
           push: true
           tags: tattletech/feluda-operator-hash:worker-arm64-latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
