--- a/.github/workflows/merge-main.yml
+++ b/.github/workflows/merge-main.yml
@@ -64,6 +64,8 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: tattletech/feluda-operator-vidvec:worker-amd64-${{ needs.release.outputs.tag }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Publish vidvec arm64 worker to dockerhub
         uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0 # v5.3.0
@@ -73,6 +75,8 @@ jobs:
           platforms: linux/arm64
           push: true
           tags: tattletech/feluda-operator-vidvec:worker-arm64-${{ needs.release.outputs.tag }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Publish audiovec amd64 worker to dockerhub
         uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0 # v5.3.0
@@ -82,6 +86,8 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: tattletech/feluda-operator-audiovec:worker-amd64-${{ needs.release.outputs.tag }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Publish audiovec arm64 worker to dockerhub
         uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0 # v5.3.0
@@ -91,6 +97,8 @@ jobs:
           platforms: linux/arm64
           push: true
           tags: tattletech/feluda-operator-audiovec:worker-arm64-${{ needs.release.outputs.tag }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Publish media hash amd64 worker to dockerhub
         uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0 # v5.3.0
@@ -100,6 +108,8 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: tattletech/feluda-operator-hash:worker-amd64-${{ needs.release.outputs.tag }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Publish media hash arm64 worker to dockerhub
         uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0 # v5.3.0
@@ -109,6 +119,8 @@ jobs:
           platforms: linux/arm64
           push: true
           tags: tattletech/feluda-operator-hash:worker-arm64-${{ needs.release.outputs.tag }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
 #      - name: deploy to cluster
 #        uses: steebchen/kubectl@v2.0.0
