--- a/src/Dockerfile.test
+++ b/src/Dockerfile.test
@@ -1,32 +1,42 @@
-FROM python:3.11-slim-bullseye AS base
+### TEST IMAGE ###
+FROM --platform=$BUILDPLATFORM python:3.11-slim-bullseye@sha256:47863f26a5f2e0bfa903e7b658355940250979bd555b5e4f9f25da81647daff8 AS test
 
+# Update image, install required utils, and remove cache
 RUN apt-get update \
     && apt-get -y upgrade \
+    && apt-get install -y --no-install-recommends vim zsh curl wget grep \
     && rm -rf /var/lib/apt/lists/*
 
-# Set python user
-RUN groupadd -g 999 python && \
-    useradd --create-home -r -u 999 -g python python
-RUN mkdir /usr/app && chown python:python /usr/app
-WORKDIR /usr/app
+# Set python group and user, create home dir, create app dir, change ownership of app to user
+RUN groupadd -g 999 python \
+    && useradd --create-home -r -u 999 -g python python \
+    && mkdir /home/python/app \
+    && chown -R python:python /home/python/app/
 
-# Set venv
-RUN python -m venv /usr/app/venv && chown -R python:python /usr/app/venv
-ENV PATH="/usr/app/venv/bin:$PATH"
+# Set working dir
+WORKDIR /home/python/app
 
-RUN pip install --no-cache-dir --upgrade pip
-RUN apt-get update && apt-get -y upgrade && apt-get install -y --no-install-recommends wget curl grep
-COPY --chown=python:python requirements.txt /usr/app/requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
+# Create venv and change ownership recursively
+RUN python -m venv /home/python/app/venv \
+    && chown -R python:python /home/python/app/venv
+# Set venv in path
+ENV PATH="/home/python/app/venv/bin:$PATH"
 
-# Install operators before code copy to speedup docker build on code changes
-COPY --chown=python:python ./core/operators/vid_vec_rep_resnet_requirements.txt /usr/app/core/operators/vid_vec_rep_resnet_requirements.txt
-RUN pip install --no-cache-dir -r /usr/app/core/operators/vid_vec_rep_resnet_requirements.txt
-COPY --chown=python:python ./core/operators/audio_vec_embedding_requirements.txt /usr/app/core/operators/audio_vec_embedding_requirements.txt
-RUN pip install --no-cache-dir -r /usr/app/core/operators/audio_vec_embedding_requirements.txt
+# Copy core and operator requirements
+COPY --chown=python:python requirements.txt /home/python/app/requirements.txt
+COPY --chown=python:python ./core/operators/vid_vec_rep_resnet_requirements.txt /home/python/app/core/operators/vid_vec_rep_resnet_requirements.txt
+COPY --chown=python:python ./core/operators/audio_vec_embedding_requirements.txt /home/python/app/core/operators/audio_vec_embedding_requirements.txt
 
-COPY --chown=python:python . /usr/app
+# Run pip install
+RUN pip install --no-cache-dir --upgrade pip \
+    && pip install --no-cache-dir --require-hashes --no-deps -r /home/python/app/requirements.txt \
+    && pip install --no-cache-dir --require-hashes --no-deps -r /home/python/app/core/operators/vid_vec_rep_resnet_requirements.txt \
+    && pip install --no-cache-dir --require-hashes --no-deps -r /home/python/app/core/operators/audio_vec_embedding_requirements.txt
 
-#### TEST IMAGE ####
-FROM base AS test
-USER 999
+# Copy all files and change ownership to unprivileged user
+COPY --chown=python:python . /home/python/app
+
+# Set unprivileged user with group membership
+USER python:python
+
+#################################
