--- a/src/benchmark/audiovec/Dockerfile.audio_vec_embedding
+++ b/src/benchmark/audiovec/Dockerfile.audio_vec_embedding
@@ -1,4 +1,4 @@
-FROM python:3.11-slim-bullseye AS base
+FROM --platform=$BUILDPLATFORM python:3.11-slim-bullseye@sha256:47863f26a5f2e0bfa903e7b658355940250979bd555b5e4f9f25da81647daff8 AS base
 
 RUN apt-get update \
     && apt-get -y upgrade \
@@ -21,7 +21,7 @@ RUN pip install --no-cache-dir --upgrade pip
 
 # audio requirments file
 COPY --chown=python:python ./core/operators/audio_vec_embedding_requirements.txt /usr/app/core/operators/audio_vec_embedding_requirements.txt
-RUN pip install --no-cache-dir -r /usr/app/core/operators/audio_vec_embedding_requirements.txt
+RUN pip install --no-cache-dir --require-hashes --no-deps -r /usr/app/core/operators/audio_vec_embedding_requirements.txt
 # audio vec file
 COPY --chown=python:python ./core/operators/audio_vec_embedding.py /usr/app/core/operators/audio_vec_embedding.py
 # audio vec test and media files
