- setup python version

--- a/.github/workflows/pr-security.yml
+++ b/.github/workflows/pr-security.yml
@@ -25,6 +25,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
 
+      - name: Setup Python version
+        uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c # v5.0.0
+        with:
+          python-version: '3.11'
+
       - name: Lint with Ruff
         run: |
           pip install ruff==0.3.2
