--- a/.github/workflows/docker-push-vidvec-benchmark-test.yml
+++ b/.github/workflows/docker-push-vidvec-benchmark-test.yml
@@ -39,13 +39,6 @@ jobs:
           tags: tattletech/feluda-operator-vidvec:benchmark-amd64-latest-test
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
-      - # Temp fix
-        # https://github.com/docker/build-push-action/issues/252
-        # https://github.com/moby/buildkit/issues/1896
-        name: Move cache
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
       - name: Build and push arm64
         uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0 # v5.3.0
@@ -57,7 +50,7 @@ jobs:
           tags: tattletech/feluda-operator-vidvec:benchmark-arm64-latest-test
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
-      - # Temp fix
+      - # Temp fix - only do this after the last docker build step to have cache for all platforms
         # https://github.com/docker/build-push-action/issues/252
         # https://github.com/moby/buildkit/issues/1896
         name: Move cache
