--- a/src/benchmark/imgvec/Dockerfile.image_vec_rep_resnet
+++ b/src/benchmark/imgvec/Dockerfile.image_vec_rep_resnet
@@ -1,4 +1,6 @@
 FROM --platform=$TARGETPLATFORM python:3.11-slim-bullseye@sha256:47863f26a5f2e0bfa903e7b658355940250979bd555b5e4f9f25da81647daff8 AS base
+ARG UID
+ARG GID
 
 RUN apt-get update \
     && apt-get -y upgrade \
@@ -11,9 +13,10 @@ RUN apt-get update \
     && rm -rf /var/lib/apt/lists/* 
 
 # Set python user
-RUN groupadd -g 999 python && \
-    useradd --create-home -r -u 999 -g python python
-RUN mkdir /usr/app && chown python:python /usr/app
+RUN groupadd -g $GID python \
+    && useradd --create-home -r -u $UID -g python python \
+    && mkdir /usr/app \
+    && chown -R python:python /usr/app
 WORKDIR /usr/app
 
 # Set venv
@@ -35,5 +38,5 @@ COPY --chown=python:python ./image_vec_operator_profile_pyinstrument.sh /usr/app
 RUN chmod +x image_vec_operator_profile_memray.sh
 RUN chmod +x image_vec_operator_profile_pyinstrument.sh
 
-USER 999
+USER python:python
 CMD tail -f /dev/null
