--- a/.github/workflows/merge-main.yml
+++ b/.github/workflows/merge-main.yml
@@ -62,6 +62,7 @@ jobs:
           context: "{{defaultContext}}:src/"
           file: worker/vidvec/Dockerfile.video_worker
           platforms: linux/amd64
+          build-args: UID=1000, GID=1000
           push: true
           tags: tattletech/feluda-operator-vidvec:worker-amd64-${{ needs.release.outputs.tag }}
 
@@ -71,6 +72,7 @@ jobs:
           context: "{{defaultContext}}:src/"
           file: worker/vidvec/Dockerfile.video_worker_graviton
           platforms: linux/arm64
+          build-args: UID=1000, GID=1000
           push: true
           tags: tattletech/feluda-operator-vidvec:worker-arm64-${{ needs.release.outputs.tag }}
 
@@ -80,6 +82,7 @@ jobs:
           context: "{{defaultContext}}:src/"
           file: worker/audiovec/Dockerfile.audio_worker
           platforms: linux/amd64
+          build-args: UID=1000, GID=1000
           push: true
           tags: tattletech/feluda-operator-audiovec:worker-amd64-${{ needs.release.outputs.tag }}
 
@@ -89,6 +92,7 @@ jobs:
           context: "{{defaultContext}}:src/"
           file: worker/audiovec/Dockerfile.audio_worker_graviton
           platforms: linux/arm64
+          build-args: UID=1000, GID=1000
           push: true
           tags: tattletech/feluda-operator-audiovec:worker-arm64-${{ needs.release.outputs.tag }}
 
@@ -98,6 +102,7 @@ jobs:
           context: "{{defaultContext}}:src/"
           file: worker/hash/Dockerfile.hash_worker
           platforms: linux/amd64
+          build-args: UID=1000, GID=1000
           push: true
           tags: tattletech/feluda-operator-hash:worker-amd64-${{ needs.release.outputs.tag }}
 
@@ -107,6 +112,7 @@ jobs:
           context: "{{defaultContext}}:src/"
           file: worker/hash/Dockerfile.hash_worker_graviton
           platforms: linux/arm64
+          build-args: UID=1000, GID=1000
           push: true
           tags: tattletech/feluda-operator-hash:worker-arm64-${{ needs.release.outputs.tag }}
 
