--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -62,6 +62,7 @@ jobs:
           context: "{{defaultContext}}:src/"
           file: Dockerfile
           platforms: linux/amd64
+          build-args: UID=1000, GID=1000
           push: true
           tags: tattletech/feluda-server:${{ steps.vars.outputs.sha_short }}
 
