fix(ci): Fixed github workflow docker build args format

--- a/.github/workflows/docker-push-audiovec-worker-staging.yml
+++ b/.github/workflows/docker-push-audiovec-worker-staging.yml
@@ -27,7 +27,9 @@ jobs:
           context: "{{defaultContext}}:src/"
           file: worker/audiovec/Dockerfile.audio_worker
           platforms: linux/amd64
-          build-args: UID=1000, GID=1000
+          build-args: |
+            "UID=1000"
+            "GID=1000"
           push: true
           tags: tattletech/feluda-operator-audiovec:worker-amd64-latest
 
@@ -37,6 +39,8 @@ jobs:
           context: "{{defaultContext}}:src/"
           file: worker/audiovec/Dockerfile.audio_worker_graviton
           platforms: linux/arm64
-          build-args: UID=1000, GID=1000
+          build-args: |
+            "UID=1000"
+            "GID=1000"
           push: true
           tags: tattletech/feluda-operator-audiovec:worker-arm64-latest
