--- a/.github/workflows/docker-push-vidvec-benchmark-test.yml
+++ b/.github/workflows/docker-push-vidvec-benchmark-test.yml
@@ -35,7 +35,9 @@ jobs:
           context: "{{defaultContext}}:src/"
           file: benchmark/vidvec/Dockerfile.vid_vec_rep_resnet
           platforms: linux/amd64
-          build-args: UID=1000, GID=1000
+          build-args: |
+            "UID=1000"
+            "GID=1000"
           push: true
           tags: tattletech/feluda-operator-vidvec:benchmark-amd64-latest-test
           cache-from: type=local,src=/tmp/.buildx-cache
@@ -47,7 +49,9 @@ jobs:
           context: "{{defaultContext}}:src/"
           file: benchmark/vidvec/Dockerfile.vid_vec_rep_resnet_graviton
           platforms: linux/arm64
-          build-args: UID=1000, GID=1000
+          build-args: |
+            "UID=1000"
+            "GID=1000"
           push: true
           tags: tattletech/feluda-operator-vidvec:benchmark-arm64-latest-test
           cache-from: type=local,src=/tmp/.buildx-cache
