--- a/.github/workflows/docker-push-vidvec-benchmark.yml
+++ b/.github/workflows/docker-push-vidvec-benchmark.yml
@@ -27,7 +27,9 @@ jobs:
           context: "{{defaultContext}}:src/"
           file: benchmark/vidvec/Dockerfile.vid_vec_rep_resnet
           platforms: linux/amd64
-          build-args: UID=1000, GID=1000
+          build-args: |
+            "UID=1000"
+            "GID=1000"
           push: true
           tags: tattletech/feluda-operator-vidvec:benchmark-amd64-latest
 
@@ -37,6 +39,8 @@ jobs:
           context: "{{defaultContext}}:src/"
           file: benchmark/vidvec/Dockerfile.vid_vec_rep_resnet_graviton
           platforms: linux/arm64
-          build-args: UID=1000, GID=1000
+          build-args: |
+            "UID=1000"
+            "GID=1000"
           push: true
           tags: tattletech/feluda-operator-vidvec:benchmark-arm64-latest
