--- a/.github/workflows/docker-push-vidvec-worker-staging.yml
+++ b/.github/workflows/docker-push-vidvec-worker-staging.yml
@@ -27,7 +27,9 @@ jobs:
           context: "{{defaultContext}}:src/"
           file: worker/vidvec/Dockerfile.video_worker
           platforms: linux/amd64
-          build-args: UID=1000, GID=1000
+          build-args: |
+            "UID=1000"
+            "GID=1000"
           push: true
           tags: tattletech/feluda-operator-vidvec:worker-amd64-latest
 
@@ -37,6 +39,8 @@ jobs:
           context: "{{defaultContext}}:src/"
           file: worker/vidvec/Dockerfile.video_worker_graviton
           platforms: linux/arm64
-          build-args: UID=1000, GID=1000
+          build-args: |
+            "UID=1000"
+            "GID=1000"
           push: true
           tags: tattletech/feluda-operator-vidvec:worker-arm64-latest
