feat: hash worker can add data to postgresql

--- a/src/.env-template
+++ b/src/.env-template
@@ -14,3 +14,7 @@ ES_TXT_INDEX=txtsearch
 ES_VID_INDEX=vidsearch
 WSGI_HOST=XXXXX
 WSGI_DEBUG=XXXXX
+PG_HOST=postgres
+PG_DB=postgres
+PG_USER=tattle
+PG_PASS=tattle_pw
