feat: Add video CRC to postgres - Created trigger function for updating timestamp - Modified create table function with conditional for table - Added create table for storing CRC - Added function to create trigger for table - Modified store and update functions to store worker_column - Added postgres init and call to storing video CRC - Pinned images in docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.5"
 services:
   store:
     container_name: es
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.12.0
+    image: docker.elastic.co/elasticsearch/elasticsearch@sha256:ec72548cf833e58578d8ff40df44346a49480b2c88a4e73a91e1b85ec7ef0d44 # docker.elastic.co/elasticsearch/elasticsearch:8.12.0
     volumes:
       - ./.docker/es/data:/var/lib/elasticsearch/data
     ports:
@@ -27,7 +27,7 @@ services:
       - IPC_LOCK
 
   queue:
-    image: rabbitmq:3.12.12-management
+    image: rabbitmq@sha256:e2505f78d58dca8c372cde3930e4d6bee5e02ac9001ce85ece5a11df606c1fa3 # rabbitmq:3.12.12-management
     container_name: rabbitmq
     hostname: rabbit
     volumes:
