ci: Fix bandit to run from single workflow - Added bandit.yml to run on PR - Disabled bandit from pr-security.yml

--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -18,6 +18,16 @@ permissions:
 on:
   push:
     branches: [ "main" ]
+  pull_request:
+    branches:
+      - main
+      - development
+      - hotfix
+    types:
+      - opened
+      - synchronize
+      - reopened
+      - ready_for_review
   schedule:
     - cron: '55 4 * * 2'
 
